# sssocketlib

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  socketbuffer.cpp  socketbuffer.hpp  socketexception.cpp  socketexception.hpp  tcpsocket.cpp  tcpsocket.hpp
src/C/: socket.c  socket.h
